# XenonCord

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  pom.xml
.github/workflows/: github-actions-demo.yml
api/: .factorypath  pom.xml
api/src/main/java/io/github/waterfallmc/waterfall/forwarding/: ForwardingMode.java
api/src/main/java/ir/xenoncommunity/api/event/: PostPlayerHandshakeEvent.java
api/src/main/java/net/md_5/bungee/api/: Callback.java  ProxyConfig.java  ResourcePackInfo.java
api/src/main/java/net/md_5/bungee/api/config/: ConfigurationAdapter.java
api/src/main/java/net/md_5/bungee/api/connection/: PendingConnection.java  ProxiedPlayer.java
api/src/main/java/net/md_5/bungee/api/event/: CancellableProxyPingEvent.java  CustomClickEvent.java  PlayerConfigurationEvent.java  PlayerResourcePackStatusEvent.java  ResourcePackSendEvent.java
api/src/main/java/net/md_5/bungee/api/plugin/: PluginManager.java
api/src/main/java/net/md_5/bungee/util/: ConcurrentCaseInsensitiveMap.java
bootstrap/: pom.xml
chat/: pom.xml
config/: pom.xml
dialog/: pom.xml
event/: pom.xml
event/src/main/java/net/md_5/bungee/event/: EventBus.java  EventHandlerMethod.java
log4j/: pom.xml
log4j/src/main/resources/: log4j2-bungee.xml  log4j2.xml
native/: compile-native-arm.sh  compile-native.sh  pom.xml
native/src/main/c/: CMakeLists.txt  NativeCompressImpl.c
native/src/main/c/.cache/clangd/index/: NativeCipherImpl.c.9B0A108308657566.idx  NativeCompressImpl.c.318CB25F375ECFB4.idx  cpuid_helper.h.06738708A0398052.idx  net_md_5_bungee_jni_cipher_NativeCipherImpl.h.4CBBC2EC7D9ED69F.idx  net_md_5_bungee_jni_zlib_NativeCompressImpl.h.BAFE1578F9294E68.idx  shared.c.10F7258E43CCFCEA.idx  shared.h.D445DA41685819DA.idx
native/src/main/c/NativeCipher/: CMakeLists.txt
native/src/main/c/NativeCompress/: CMakeLists.txt
native/src/main/c/src/: NativeCipherImpl.c  NativeCompressImpl.c  mbedtls_custom_config.h  net_md_5_bungee_jni_cipher_NativeCipherImpl.h  net_md_5_bungee_jni_zlib_NativeCompressImpl.h  shared.c  shared.h
native/src/main/java/net/md_5/bungee/jni/cipher/: NativeCipher.java
nbt/: pom.xml
protocol/: .factorypath  pom.xml
protocol/src/main/java/net/md_5/bungee/protocol/: AbstractPacketHandler.java  DefinedPacket.java  Protocol.java  ProtocolConstants.java
protocol/src/main/java/net/md_5/bungee/protocol/packet/: Item.java  KnownPacks.java  Login.java  LoginSuccess.java  MapData.java  PlayerPositionAndLook.java  ResourcePackRemove.java  ResourcePackResponse.java  ResourcePackSend.java  Respawn.java  SetSlot.java  Team.java  WindowItems.java
proxy/: .factorypath  pom.xml
proxy/src/main/java/io/github/waterfallmc/waterfall/forwarding/: VelocityForwardingUtil.java
proxy/src/main/java/ir/xenoncommunity/: Metrics.java  XenonCore.java
proxy/src/main/java/ir/xenoncommunity/commands/: CommandBPlugins.java  CommandSend.java  CommandXenonCord.java
proxy/src/main/java/ir/xenoncommunity/module/impl/gui/: GuiModule.java
proxy/src/main/java/ir/xenoncommunity/module/impl/ipwhitelist/: IPWhitelistModule.java
proxy/src/main/java/ir/xenoncommunity/module/impl/proxy/: AntiProxyModule.java
proxy/src/main/java/ir/xenoncommunity/utils/: BlacklistManager.java  Configuration.java  HttpClient.java  Language.java  MapPalette.java  TaskManager.java  WhitelistUtils.java
proxy/src/main/java/net/md_5/bungee/: BungeeCord.java  ServerConnection.java  ServerConnector.java  UserConnection.java
proxy/src/main/java/net/md_5/bungee/conf/: Configuration.java  YamlConfig.java
proxy/src/main/java/net/md_5/bungee/connection/: DownstreamBridge.java  InitialHandler.java  UpstreamBridge.java
proxy/src/main/java/net/md_5/bungee/entitymap/: EntityMap.java
proxy/src/main/java/net/md_5/bungee/netty/: HandlerBoss.java  PipelineUtils.java
proxy/src/main/java/net/md_5/bungee/scheduler/: BungeeScheduler.java  BungeeTask.java
proxy/src/main/java/net/md_5/bungee/util/: VelocityForwardingUtil.java
proxy/src/main/resources/: XenonCord.yml  language.yml
query/: pom.xml
serializer/: pom.xml
(+3 files in other folders)
